--- a/style.css
+++ b/style.css
@@ -22,6 +22,40 @@ body,
   width: 90vw;
 }
 
+.card {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  position: relative;
+  border-radius: 0.25rem;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+  height: 100px;
+  width: 100%;
+  margin-bottom: 2rem;
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0));
+  transform-style: preserve-3d;
+  transition: 250ms;
+}
+
+.card.flip {
+  --rotate-y: 180deg;
+}
+
+.card .front,
+.card .back {
+  padding: 1rem 1.5rem;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.card .front {
+  left: 0;
+}
+
+.card .back {
+  transform: rotateY(180deg);
+}
+
 .header h1 {
   margin: 1rem 0;
 }
@@ -88,6 +122,7 @@ body,
   height: 3rem;
 }
 h4 {
+  margin-top: 6rem;
   width: 100%;
   text-align: center;
   font-weight: 100;
