--- a/style.css
+++ b/style.css
@@ -30,11 +30,11 @@ body,
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
   height: 100px;
-  width: 100%;
-  margin-bottom: 2rem;
+  width: 90%;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0));
   transform-style: preserve-3d;
   transition: 250ms;
+  margin: 0 auto 2rem auto;
 }
 
 .card.flip {
@@ -61,8 +61,8 @@ body,
 }
 
 .question img {
-  width: 90vw;
-  height: 90vw;
+  width: 90%;
+  height: 90%;
   margin-bottom: 1rem;
 }
 
@@ -74,6 +74,8 @@ body,
 .answerUser {
   display: flex;
   justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .answerUser input[type="text"] {
@@ -126,4 +128,10 @@ h4 {
   width: 100%;
   text-align: center;
   font-weight: 100;
+}
+
+@media (min-width: 400px) {
+  .wrapper {
+    width: 500px;
+  }
 }
